# japanfinance-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/japanfinance_agent/: __init__.py  adapters.py  analysis.py  cli.py  server.py
tests/: test_adapters.py  test_analysis.py  test_cli.py  test_server.py
